@@ -188,7 +188,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Python                 Roberto Rossi
 - PyCon                  Benny Baumann
 - q/kdb+                 Ian Roddis
-- R / S+                 Ron Fredericks
+- R / S+                 Ron Fredericks, Fernando H.F.P. da Rosa
 - Rails                  Moises Deniz
 - Rebol                  Lecanu Guillaume
 - Reg                    SmokingRope
